--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.6.0",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
     "moment": "^2.29.4",
@@ -15,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1"
