--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.11.2",
