--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.4",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
@@ -20,6 +26,7 @@
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.0",
     "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1"
   },
