--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
