--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.11.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.0",
