--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   },
   "name": "book_app",
   "version": "1.0.0",
