--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,25 @@
     "@fontsource/roboto": "^5.0.8",
     "@material-tailwind/react": "^2.1.7",
     "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.16",
+    "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/x-charts": "^6.18.7",
     "@tailwindcss/forms": "^0.5.3",
+    "apexcharts": "^3.45.1",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "firebase": "^10.7.1",
     "moment": "^2.29.4",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
